--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="" href="style.css">
-  <script src="app.js"></script>
+
   <title>Simon App</title>
 </head>
 <body>
-
+<h1>Simon Game</h1>
+<h5>Modern web app for popular 1980's game</h5>
+<div id="green" class="btn gameButton"></div>
+<div id="red" class="btn gameButton"></div>
+<div id="blue" class="btn gameButton"></div>
+<div id="yellow" class="btn gameButton"></div>
+<div id="counter">0</div>
+<button type="button" id="startButton" class="btn" onclick="startGame()">Start</button>
+<script src="app.js"></script>
 </body>
 </html>
