Fixed logic, added reset button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 <div id="yellow" class="btn gameButton"></div>
 <div id="counter">0</div>
 <button type="button" id="startButton" class="btn" onclick="startGame()">Start</button>
+<button type="button" id="resetButton" class="btn" onclick="resetGame()">Reset</button>
+<div id="message"></div>
 <script src="app.js"></script>
 </body>
 </html>
