Added strict mode feature

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <div id="counter">0</div>
 <button type="button" id="startButton" class="btn" onclick="startGame()">Start</button>
 <button type="button" id="resetButton" class="btn" onclick="resetGame()">Reset</button>
+<button type="button" id="strictButton" class="btn" onclick="startStrict()">Strict</button>
 <div id="message"></div>
 <script src="app.js"></script>
 </body>
