--- a/index.html
+++ b/index.html
@@ -12,10 +12,18 @@
 <body>
 <h1>Simon Game</h1>
 <h5>Modern web app for popular 1980's game</h5>
-<div id="green" class="btn gameButton"></div>
-<div id="red" class="btn gameButton"></div>
-<div id="blue" class="btn gameButton"></div>
-<div id="yellow" class="btn gameButton"></div>
+<div id="green" class="btn gameButton">
+  <audio id="greenAudio" src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3"></audio>
+</div>
+<div id="red" class="btn gameButton">
+  <audio id="redAudio" src="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3"></audio>
+</div>
+<div id="blue" class="btn gameButton">
+  <audio id="blueAudio" src="https://s3.amazonaws.com/freecodecamp/simonSound3.mp3"></audio>
+</div>
+<div id="yellow" class="btn gameButton">
+  <audio id="yellowAudio" src="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3"></audio>
+</div>
 <div id="counter">0</div>
 <button type="button" id="startButton" class="btn" onclick="startGame()">Start</button>
 <button type="button" id="resetButton" class="btn" onclick="resetGame()">Reset</button>
