--- a/index.html
+++ b/index.html
@@ -6,29 +6,31 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="" href="style.css">
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
   <title>Simon App</title>
 </head>
 <body>
-<h1>Simon Game</h1>
-<h5>Modern web app for popular 1980's game</h5>
-<div id="green" class="btn gameButton">
-  <audio id="greenAudio"src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3"></audio>
-</div>
-<div id="red" class="btn gameButton">
-  <audio id="redAudio" src="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3"></audio>
-</div>
-<div id="blue" class="btn gameButton">
-  <audio id="blueAudio" src="https://s3.amazonaws.com/freecodecamp/simonSound3.mp3"></audio>
-</div>
-<div id="yellow" class="btn gameButton">
-  <audio id="yellowAudio" src="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3"></audio>
-</div>
-<div id="counter">0</div>
-<button type="button" id="startButton" class="btn" onclick="startGame()">Start</button>
-<button type="button" id="resetButton" class="btn" onclick="resetGame()">Reset</button>
-<button type="button" id="strictButton" class="btn" onclick="startStrict()">Strict</button>
-<div id="message"></div>
-<script src="app.js"></script>
+  <h1 class="text-center">Simon Game</h1>
+  <h5 class="text-center">Modern web app for popular 1980's game</h5>
+  <div class="container text-center">
+    <div id="green" class="btn gameButton">
+      <audio id="greenAudio" src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3"></audio>
+    </div>
+    <div id="red" class="btn gameButton">
+      <audio id="redAudio" src="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3"></audio>
+    </div>
+    <div id="blue" class="btn gameButton">
+      <audio id="blueAudio" src="https://s3.amazonaws.com/freecodecamp/simonSound3.mp3"></audio>
+    </div>
+    <div id="yellow" class="btn gameButton">
+      <audio id="yellowAudio" src="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3"></audio>
+    </div>
+    <div id="counter">0</div>
+    <button type="button" id="startButton" class="btn btn-default" onclick="startGame()">Start</button>
+    <button type="button" id="resetButton" class="btn btn-default" onclick="resetGame()">Reset</button>
+    <button type="button" id="strictButton" class="btn btn-default" onclick="startStrict()">Strict</button>
+    <div id="message"></div>
+  </div>
+  <script src="app.js"></script>
 </body>
 </html>
